--- a/product_search_page.html
+++ b/product_search_page.html
@@ -19,6 +19,17 @@
 
     <div id="searchPage"></div>
 
+    <table>
+        <thead>
+            <th>Product Id:</th>
+            <th>Name: </th>
+            <th>Price: </th>
+        </thead>
+        <tbody id="productTableBody">
+
+        </tbody>
+    </table>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="scripts/product_search_page.js"></script>
