got my categories DD to work

--- a/product_search_page.html
+++ b/product_search_page.html
@@ -17,6 +17,10 @@
         <option value="viewAll">View All</option>
     </select>
 
+  
+    <select id="categorySearchDDL">
+    </select>
+
     <div id="searchPage"></div>
 
     <table>
@@ -26,6 +30,17 @@
             <th>Price: </th>
         </thead>
         <tbody id="productTableBody">
+
+        </tbody>
+    </table>
+
+
+    <table>
+        <thead>
+            <th>CategoryId:</th>
+            <th>Name: </th>
+        </thead>
+        <tbody id="categoryTableBody">
 
         </tbody>
     </table>
